--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -10,13 +10,12 @@
     <link href="{{ asset('bundles/dukecitycommandscheduler/css/select2.min.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/dukecitycommandscheduler/css/bootstrap-icons.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/dukecitycommandscheduler/css/datatables.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/dukecitycommandscheduler/css/dataTables.bootstrap4.min.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/dukecitycommandscheduler/css/custom.css') }}" rel="stylesheet">
 </head>
 <body id="dukecity">
 {% include '@DukecityCommandScheduler/Navbar/navbar.html.twig' %}
 <div class="">
-    <div class="container-fluid" style="margin-top:30px; max-width: 1300px; margin-bottom: 50px;">
+    <div class="container-fluid" style="margin-top:30px; max-width: 100%; margin-bottom: 50px;">
         <div class="row">
             <div class="col-md-12">
 
@@ -40,30 +39,12 @@
     </div>
 </div><!-- /container -->
 
-<script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/jquery-3.6.0.slim.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/jquery-migrate-3.3.2.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/jquery-3.7.1.slim.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/bootstrap.bundle.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/bootstrap-confirmation.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/select2.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/datatables.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/dukecitycommandscheduler/js/dataTables.bootstrap4.min.js') }}"></script>
 
 <script type="text/javascript">
-
-    $(document).ready(function () {
-
-        // Enable bootstrap-confirmation (https://bootstrap-confirmation.js.org/)
-        $('[data-toggle=confirmation]').confirmation({
-            rootSelector: '[data-toggle=confirmation]',
-            container: 'body',
-            singleton: true,
-            popout: true,
-            placement: 'left',
-            btnOkClass: 'btn btn-danger',
-            btnCancelLabel: 'Cancel',
-            btnCancelClass: 'btn btn-secondary',
-        });
-    });
 
     {% block javascript %}{% endblock javascript %}
 
