--- a/Resources/views/List/index.html.twig
+++ b/Resources/views/List/index.html.twig
@@ -55,7 +55,7 @@
                     {{ command.command }} {{ command.arguments }}
                 </td>
                 <td>
-                    <span title="{{ command.getCronExpressionTranslated() }}">{{ command.cronExpression }}</span>
+                    <span title="{{ command.getCronExpressionTranslated(app.request.locale) }}">{{ command.cronExpression }}</span>
                 </td>
                 <td>
                     {{ command.logFile }}
